[package]
name = "demo_bevy_client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "native"
path = "src/bin/native.rs"
required-features = ["transport"]

[features]
default = ["webtransport"]
transport = ["bevy_renet2/transport"]
steam = ["dep:renet2_steam", "steamworks"]
webtransport = [
    "bevy_renet2/transport",
    "bevy_renet2/wt_client",
    "dep:base64",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:wasm-timer",
    "dep:console_error_panic_hook",
]

[dependencies]
demo_bevy_shared = { path = "../shared" }
bevy = { version = "0.13" }
bevy_renet2 = { path = "../../bevy_renet2", features = ["serde"] }
renet2_steam = { path = "../../renet2_steam", features = [
    "bevy",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bevy_egui = "0.25"
renet2_visualizer = { path = "../../renet2_visualizer", features = ["bevy"] }
smooth-bevy-cameras = "0.11"
fastrand = "2.0"
steamworks = { version = "0.11", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
base64 = { version = "0.22", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-timer = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
