[package]
name = "demo_bevy_server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["webtransport"]
transport = ["bevy_renet2/transport"]
webtransport = [
    "bevy_renet2/transport",
    "bevy_renet2/wt_server",
    "dep:base64",
    "dep:tokio",
]
steam = ["dep:renet2_steam", "steamworks"]

[dependencies]
demo_bevy_shared = { path = "../shared" }
bevy = { version = "0.13", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_pbr",
    "x11",
    "tonemapping_luts",
    "ktx2",
    "zstd",
] }
bevy_renet2 = { path = "../../bevy_renet2", features = ["serde"] }
renet2_steam = { path = "../../renet2_steam", features = [
    "bevy",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bevy_egui = "0.25"
renet2_visualizer = { path = "../../renet2_visualizer", features = ["bevy"] }
smooth-bevy-cameras = "0.11"
fastrand = "2.0"
steamworks = { version = "0.11", optional = true }
base64 = { version = "0.22", optional = true }
tokio = { version = "1.32", optional = true }
